--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^7.3.1",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
