--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
     "eslint": "^9.32.0",
     "eslint-import-resolver-typescript": "^4.4.4",
